test/fail/typ_inconsistency_dict1.cll
<int,int>{'a':0};
0;
